fixed the theme color change from student coding window

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -107,7 +107,7 @@
 
         <div class="login-link">
           Already an <span class="angaari-highlight"
-            title="Angaari is a Hindi word meaning 'fiery' or 'burning'">Angaari</span>?
+            title="Angaari is a Hindi word meaning 'fiery' or 'burning'">Angaari?</span>
           <a href="{% url 'login' %}">Login</a>
         </div>
       </form>
