--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -202,6 +202,14 @@
                             <button style="width: 100%;">Dashboard</button>
                         </a>
 
+                        {% elif user_type == 'instructor' %}
+
+                        <a href="{% url 'instructor' %}">
+                            <button style="width: 100%;">Dashboard</button>
+                        </a>
+
+
+
                         {% endif %}
                     </li>
 
