added the mcq pages 10%. just the mcq page

--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -1,5 +1,7 @@
 {% extends "student/base.html" %} {% load static %} {% block title %} Practice: {{ question.title }} {% endblock %}
-{%block pp_active %} active {% endblock %} {% block extra_css %}
+{% block my_batches_active %}
+active
+{% endblock %} {% block extra_css %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <style>
