--- a/templates/student/batch/my_sheet.html
+++ b/templates/student/batch/my_sheet.html
@@ -7,7 +7,7 @@
 {{ sheet.name }}
 {% endblock %}
 
-`{% block my_batches_active %}
+{% block my_batches_active %}
 active
 {% endblock %}
 
@@ -93,7 +93,120 @@ active
         </div>
     </div> -->
 
-    <!-- =================================  QUESTIONS TABLE ================================== -->
+    <!-- ================================= MCQ QUESTIONS TABLE ================================== -->
+
+    {% if sheet.sheet_type == "MCQ" %}
+
+    <div class="card w-100">
+        <div class="card-body p-4">
+            <h5 class="card-title fw-semibold mb-4">MCQ QUESTIONS 🔥
+                {% if query %}
+                <span class="fs-6"> | Search Results for "{{ query }}"</span>
+                {% endif %}
+            </h5>
+            <div class="table-responsive">
+                <table class="table text-nowrap mb-0 align-middle">
+                    <thead class=" fs-4">
+
+                        <tr>
+                            <th class="border-bottom-0">
+                                <h6 class="fw-semibold mb-0">
+                                    #
+                                </h6>
+                            </th>
+                            <th class="border-bottom-0">
+                                <h6 class="fw-semibold mb-0">
+                                    Title 📚
+                                </h6>
+                            </th>
+                            <th class="border-bottom-0" style="text-align: center;">
+                                <h6 class="fw-semibold mb-0">
+                                    Level 📊
+                                </h6>
+                            </th>
+
+                            <th class="border-bottom-0" style="text-align: center;">
+                                <h6 class="fw-semibold mb-0">
+                                    Status🚦
+                                </h6>
+                            </th>
+                            <th class="border-bottom-0 justify-content-center">
+                                <h6 class="fw-semibold mb-0">
+                                    Link 🔗
+                                </h6>
+                            </th>
+                            <!-- <th class="border-bottom-0 justify-content-center">
+                                <h6 class="fw-semibold mb-0">
+                                    Action#2
+                                </h6>
+                            </th> -->
+
+                        </tr>
+                    </thead>
+
+                    <tbody>
+
+                        <!-- style="background-color: rgba(66, 66, 66, 0.639);" -->
+                        {% for question in sheet.get_ordered_questions %}
+                        <tr>
+                            <td class="border-bottom-0">
+                                <h6 class="fw-semibold mb-0">{{ forloop.counter }}</h6>
+                            </td>
+                            <td class="border-bottom-0">
+                                <h6 class="fw-semibold mb-1 text-wrap" style="width: 100%;"
+                                    title="{{ question.question_text }}">{{ question.question_text|truncatewords:10 }}</h6>
+                            </td>
+                            <td class="border-bottom-0" style="text-align: center;">
+                                <h6 class="fw-semibold mb-0 fs-4">
+                                    <span class="badge bg-{{ question.get_difficulty_level_color }} text-color">
+                                        {{ question.difficulty_level }}
+                                    </span>
+                                </h6>
+                            </td>
+
+                            <td class="border-bottom-0" style="text-align: center;">
+                                {% if user_submissions|get_item:question.id %}
+                                {% with submission=user_submissions|get_item:question.id %}
+                                <span class="badge bg-{{ submission.status|get_status_color }} text-color">{{ submission.status }}</span>
+                                <br><a href="{% url 'my_submissions' question.slug %}"
+                                    class=" mt-1 btn btn-sm btn-outline-warning">View Submissions</a>
+                                {% endwith %}
+                                {% else %}
+                                <p>Not Attempted</p>
+                                {% endif %}
+                            </td>
+                            <td class="border-bottom-0">
+                                <div class="d-flex align-items-center gap-2">
+
+                                    {% if question in enabled_questions %}
+
+                                    <a href="{% url 'mcq_question' sheet.slug question.slug %}" class="btn btn-dark">
+                                        Try Now🔥
+                                    </a>
+
+                                    {% else %}
+
+                                    <button class="btn btn-dark" disabled>
+                                        LOCKED🔒
+                                    </button>
+
+                                    {% endif %}
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+
+
+                </table>
+            </div>
+
+        </div>
+    </div>
+
+    {% else %}
+
+     <!-- ================================= CODING QUESTIONS TABLE ================================== -->
 
     <div class="card w-100">
         <div class="card-body p-4">
@@ -216,6 +329,8 @@ active
         </div>
     </div>
 
+
+    {% endif %}
 
 </div>
 
